--- a/src/Terratype.LeafletV1/App_Plugins/Terratype.LeafletV1/Lang/en-us.xml
+++ b/src/Terratype.LeafletV1/App_Plugins/Terratype.LeafletV1/Lang/en-us.xml
@@ -5,8 +5,8 @@
   </creator>
 
   <area alias="terratypeLeafletV1">
-    <key alias="name">OpenStreetMap (Leaflet V1)</key>
-    <key alias="description">Open source map library that allows various Map providers, including OpenStreetMap</key>
+    <key alias="name">Leaflet V1</key>
+    <key alias="description">Popular javascript framework for displaying interactivce maps from various sources includes OpenStreetMap maps</key>
     <key alias="referenceUrl">http://leafletjs.com/index.html</key>
   </area>
 
@@ -53,6 +53,11 @@
     <key alias="name">Thunderforest</key>
     <key alias="description"><![CDATA[The <a href="https://www.thunderforest.com/">Thunderforest</a> Platform is the 4th major revision of the systems that powers OpenCycleMap. With mapnik and postgis at its core, supported with mod_tile, squid, and a host of other components, it provides robust, fast, reliable and wonderful-looking maps. The Thunderforest Platform has enabled me to expand to easily host multiple map styles and serve millions of requests per month to clients all around the globe.]]></key>
 
+    <key alias="keyName">API Key:</key>
+    <key alias="keyDescription">Api Key as defined in your Thunderforest acccount</key>
+    <key alias="keyPlaceholder">Thunderforest API Key</key>
+    <key alias="keyUrl"><![CDATA[Thunderforest API Key can be configured by signing into your <a href="https://manage.thunderforest.com/users/sign_in">Thunderforest account</a>]]></key>
+
     <key alias="openCycleMapName">OpenCycleMap</key>
     <key alias="openCycleMapAttribution"><![CDATA[&copy; <a href="http://www.thunderforest.com/">Thunderforest</a>, &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>]]></key>
 
@@ -83,7 +88,12 @@
 
     <key alias="satelliteName">Satellite</key>
     <key alias="satelliteAttribution"><![CDATA[Map data &copy;2017]]></key>
-
   </area>
 
+  <area alias="terratypeLeafletV1ConfigDefinition">
+    <key alias="terratypeLeafletV1ConfigDefinition_mapSourceLabel">Map Source:</key>
+    <key alias="terratypeLeafletV1ConfigDefinition_mapSourceDescription">Organisations or companies that delivers map based data compatible with Leaflet V1</key>
+
+  </area>
+  
 </language>
