--- a/src/Terratype.TestSite/App_Plugins/Terratype.GoogleMapsV3/Lang/en-us.xml
+++ b/src/Terratype.TestSite/App_Plugins/Terratype.GoogleMapsV3/Lang/en-us.xml
@@ -144,8 +144,8 @@
     <key alias="apiKeyGet">[Get a key]</key>
     <key alias="apiKeyInvalid">Invalid API Key</key>
     <key alias="apiKeyValid">API Key is valid</key>
-    <key alias="apiKeyRetryTitle">Try and reload map using this Google Map API Key</key>
-    <key alias="apiKeylabel">Retry</key>
+    <key alias="retryTitle">Try and reload map using this Google Map API Key</key>
+    <key alias="retryLabel">Retry</key>
 
     <key alias="httpsLabel">Force Https:</key>
     <key alias="httpsDescription">Force all Google Map requests to use HTTPS protocol, even if the Umbraco instance is running on HTTP. Only relevant when Umbraco is running on HTTP</key>
