--- a/src/Terratype.TestSite/App_Plugins/Terratype/Lang/en-us.xml
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/Lang/en-us.xml
@@ -42,6 +42,7 @@
     <key alias="debugMode">DEBUG MODE</key>
     <key alias="reviewDate">Review Date</key>
     <key alias="terratypeEditor_error">Error loading Terratype control, the json below is corrupt</key>
+    <key alias="error">There was an error loading this map</key>
   </area>
 
   <area alias="terratypeConfig">
